<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/baseline_home_24"/>
    <item android:id="@+id/nav_live"
        android:title="@string/nav_live"
        android:icon="@drawable/baseline_live_tv_24"/>
    <!--<item android:id="@+id/nav_download"
        android:title="@string/nav_download"
        android:icon="@drawable/baseline_download_24"/>-->
    <!--<item android:id="@+id/nav_setting"
        android:title="@string/nav_setting"
        android:icon="@drawable/baseline_settings_24"/>-->

    <item
        android:id="@+id/nav_mine"
        android:title="@string/nav_mine"
        android:icon="@drawable/baseline_person_24" />
</menu>