<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CrashActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:textIsSelectable="true"
            android:padding="16dp"
            tools:text="@string/app_name"
            android:id="@+id/tv_crash_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </ScrollView>

    <LinearLayout
        android:padding="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialButtonOutlinedStyle"
            android:id="@+id/restart_app"
            android:text="@string/restart"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="10dp"
            android:id="@+id/feedback"
            android:text="@string/feedback"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>